<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_latitude"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_longitude"/>

    <TextView
        android:id="@+id/tv_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_longitude"
        app:layout_constraintLeft_toRightOf="@id/tv_latitude"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_altitude"/>

    <TextView
        android:id="@+id/tv_altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_altitude"
        app:layout_constraintLeft_toRightOf="@id/tv_longitude"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_latitude_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="xxx"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_longitude_data"
        app:layout_constraintTop_toBottomOf="@id/tv_latitude" />

    <TextView
        android:id="@+id/tv_longitude_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="xxx"
        app:layout_constraintLeft_toRightOf="@id/tv_latitude_data"
        app:layout_constraintRight_toLeftOf="@id/tv_altitude_data"
        app:layout_constraintTop_toBottomOf="@id/tv_longitude"/>

    <TextView
        android:id="@+id/tv_altitude_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="xxx"
        app:layout_constraintLeft_toRightOf="@id/tv_longitude_data"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_altitude" />


</androidx.constraintlayout.widget.ConstraintLayout>